cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_200.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/apps/ecparam.c:444: error: DEAD_STORE
  The value written to &i (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/apps/ecparam.c:444:13: Write of unused value
442.               i = i2d_ECPrivateKey_bio(out, eckey);
443.           else
444.               i = PEM_write_bio_ECPrivateKey(out, eckey, NULL,
                   ^
445.                                              NULL, 0, NULL, NULL);
446.           EC_KEY_free(eckey);
